load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "extension",
    srcs = ["extension.bzl"],
    visibility = ["//visibility:public"],
    deps = [":file"],
)

bzl_library(
    name = "file",
    srcs = ["file.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/build_defs/repo:http.bzl"],
)
