load(
    "//rules/copy_mapbox_file_from_file_target:copy_mapbox_file_from_file_target.bzl",
    "copy_mapbox_file_from_file_target",
)

copy_mapbox_file_from_file_target(
    name = "copy_mapbox_file_from_file_target",
    file_target = "@mapbox//file",
    workspace_relative_file_path = "extensions/mapbox/mapbox.zip",
)
